Bug 520209: active tab indication is too subtle / cannot see the tab focus outline (activity, contrast, invisible) [r=gavin]
UltraBlame original commit: 9a7c8f300dbd8cf8d678ae5c7b61fa731ea927be

--- a/mobile/themes/wince/browser.css
+++ b/mobile/themes/wince/browser.css
@@ -442,7 +442,7 @@ box[type="documenttab"] .documenttab-canvas {
 }
 
 box[type="documenttab"][selected="true"] .documenttab-canvas {
-  border: 0.8mm solid #262629;
+  border: 0.8mm solid #0c0d10; 
   -moz-border-radius: 4px;
 }
 
